@@ -591,32 +591,44 @@ GLint APIENTRY glcGenFontID(void)
     return 0;
   }
 
-  for (node = ctx->fontList.head; node; node = node->next) {
-    font = (__GLCfont*)node->data;
+  /* Look for an ID which is not associated to an existing font */
+  for (id = 1; id <= 0x7fffffff; id++) {
+    /* Check against fonts stored in GLC_FONT_LIST */
+    for (node = ctx->fontList.head; node; node = node->next) {
+      font = (__GLCfont*)node->data;
 
-    if (font->id == id) {
-      if (id >= 0x7fffffff) {
-	__glcRaiseError(GLC_RESOURCE_ERROR);
-	return 0;
-      }
-      id++;
-      node = ctx->fontList.head;
+      if (font->id == id)
+	break;
     }
+
+    /* A font in GLC_FONT_LIST has already the current ID, check for next ID */
+    if (node)
+      continue;
+
+    /* Check against fonts already generated by glcGenFontID() but not yet
+     * associated to a font of GLC_FONT_LIST.
+     */
+    for (node = ctx->genFontList.head; node; node = node->next) {
+      font = (__GLCfont*)node->data;
+
+      if (font->id == id)
+	break;
+    }
+
+    /* If the current ID is not associated then exit*/
+    if (!node)
+      break;
   }
 
-  for (node = ctx->genFontList.head; node; node = node->next) {
-    font = (__GLCfont*)node->data;
-
-    if (font->id == id) {
-      if (id >= 0x7fffffff) {
-	__glcRaiseError(GLC_RESOURCE_ERROR);
-	return 0;
-      }
-      id++;
-      node = ctx->genFontList.head;
-    }
+  /* If we have scanned all possible ID values and failed to find one which is
+   * not yet associated (which is very unlikely) then exit with an error.
+   */
+  if (node) {
+    __glcRaiseError(GLC_RESOURCE_ERROR);
+    return 0;
   }
 
+  /* Create an empty font */
   node = (FT_ListNode)__glcMalloc(sizeof(FT_ListNodeRec));
   if (!node) {
     __glcRaiseError(GLC_RESOURCE_ERROR);
